metadata/force-app/main/default/objects/Custom_OBJ_jj__c/fields/jj_currency__c.field-meta.xml
<CustomField>
    <fullName>jj_currency__c</fullName>
    <label>jj currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>