metadata/force-app/main/default/objects/Custom_OBJ_jj__c/fields/jj_pick__c.field-meta.xml
<CustomField>
    <fullName>jj_pick__c</fullName>
    <label>jj pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>