metadata/force-app/main/default/objects/Custom_OBJ_jj__c/fields/text_area_jj__c.field-meta.xml
<CustomField>
    <fullName>text_area_jj__c</fullName>
    <label>text area jj</label>
    <type>TextArea</type>
</CustomField>