metadata/force-app/main/default/objects/Custom_OBJ_jj__c/recordTypes/new_record_type.recordType-meta.xml
<RecordType>
    <fullName>new_record_type</fullName>
    <active>true</active>
    <label>new record type</label>
</RecordType>